# Parallel-Algorithm-Implementation

./: CMakeLists.txt  Makefile  README.md  benchmark.sh  theta_sweep.sh
docs/: ARCHITECTURE.md
include/: constants.h  init.h  logger.h  nbody.h  timer.h  utils.h
src/: init.cpp  main.cpp  nbody.cpp  utils.cpp
tests/: test_nbody.cpp
